--- a/options.html
+++ b/options.html
@@ -6,7 +6,7 @@
     <h2 id="currentFireBaseUrl"></h2>
     <input type="text" placeholder="https://firestore.googleapis.com/v1beta1/projects/<projectid>/databases/(default)/documents/<collection_name>" id="firebaseUrl">
     <button id="submitFirebase">Submit</button>
-    <h1 style="color: red;">Currently Monitoring : </h1>
+    <h1 style="color: skyblue;">Currently Monitoring : </h1>
     <div id="buttonDiv" >
     </div>
   </body>
